# Irrigation

./: .gitignore  CMakeLists.txt  README.md  STM32F407ZGTX_RAM.ld  STM32F407ZGTx_FLASH.ld  bishe.ioc  s
APP/: fsmain.c  fsmain.h  gui.c  gui.h  iot_mqtt.c  iot_mqtt.h
BSP/: CMakeLists.txt
BSP/24cxx/: 24cxx.c  24cxx.h
BSP/beep/: beep.c  beep.h
BSP/dht11/: dht11.c  dht11.h
BSP/ds1302/: ds1302.c  ds1302.h
BSP/key/: key.c  key.h
BSP/lcd_fsmc_st7789/: lcd.c  lcd_fsmc_io.c  readme.txt
BSP/lcd_fsmc_st7789/Inc/: lcd.h  lcd_fsmc_io.h
BSP/led/: led.c  led.h
BSP/myiic/: myiic.c  myiic.h
BSP/pump/: pump.c  pump.h
BSP/sensor_adc/: sensor_adc.c  sensor_adc.h
BSP/sys/: sys.c  sys.h
BSP/tftlcd_st7789v3/: lcd.c  lcd_io.c
BSP/tftlcd_st7789v3/Inc/: FONT.H  lcd.h  lcd_io.h
BSP/touch/: ctiic.c  ctiic.h  ft5206.c  ft5206.h  gt9xxx.c  gt9xxx.h  touch.c  touch.h
BSP/w25qxx/: w25qxx.c  w25qxx.h
BSP/ws2812/: ws2812.c  ws2812.h
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: gpio.c  main.c  spi.c  stm32f4xx_it.c  syscalls.c  tim.c  usart.c
Fatfs/: CMakeLists.txt  diskio.c  exfat.c  exfat.h  ffconf.h
Lvgl/: CMakeLists.txt  lv_conf.h
Lvgl/asset/: img_SICAU.c  img_air_light.c  img_air_temp.c  img_beep.c  img_lamp.c  img_pump.c  img_soil_humid.c  lv_font_zhcn_24.c  lv_font_zhcn_32.c
